apps/services/code-server/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: services
  labels:
    app: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: code-server
      annotations: {}
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: dind
        image: docker:20.10.7-dind
        imagePullPolicy: IfNotPresent
        args:
        - --host=tcp://0.0.0.0:2375
        - --tls=false
        - --experimental
        securityContext:
          privileged: true
        volumeMounts:
        - name: dind-storage
          mountPath: /var/lib/docker
        resources: {}
      - name: code-server
        image: ebrianne/code-server:v3.10.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
        resources:
          requests:
            memory: "256Mi"
            cpu: 0.5
          limits:
            memory: "2Gi"
            cpu: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8443
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8443
          initialDelaySeconds: 30
          timeoutSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: 8443
          failureThreshold: 30
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-code-server
      - name: dind-storage
        emptyDir: {}
